# ViajeyPlanner

./: .dockerignore  .env.example  .replit  .replit.new  Dockerfile  README.md  app.js  app.py  dev-server.sh  docker-entrypoint.sh  init-db.js  keep-server-running.sh  main.js  main.py  package-lock.json  package.json  pyproject.toml  run.sh  server.js  server.js.new  server.workflow  start-server.sh  start-viajey-server.sh  start-with-logs.sh  start.js  start.sh  test-db.js  wait-for-postgres.sh
attached_assets/: Pasted--1-Ao-clicar-em-Criar-Roteiro-Fechar-o-modal-imediatamente-Salvar-os-dados-no-banco-Pos-1746214419119.txt  Pasted--1-Planejamento-de-Viagem-Criar-novo-plano-com-destino-e-datas-Compartilhar-com-outras-pessoas-v-1746094990315.txt  Pasted--Como-montar-prompt-eficiente-no-Replit-Sugest-es-de-conhecimento-1-pendentes-como-montar--1746574079273.txt  Pasted--Componentes-UI-Reutiliz-veis-Assets-Esses-componentes-devem-ser-s-mbolos-componentes-no-Figma-o-1746100757905.txt  Pasted--Importante-N-o-criar-roteiro-autom-tico-O-roteiro-criado-apenas-com-base-nos-dados-inseri-1746216135734.txt  Pasted--Objetivo-Principal-Garantir-que-o-token-de-autentica-o-JWT-armazenado-no-frontend-ap-s-o-logi-1746578679154.txt  Pasted--Prompt-Otimizado-para-Replit-Agent-Refatorar-Dados-Fixos-no-ViajeyPlanner-Objetivo-Principa-1746572631867.txt  Pasted--Prompt-para-Replit-Agent-Parte-1-de-Autentica-o-Implementar-Backend-de-Autentica-o-JWT-no-Vi-1746572932540.txt  Pasted--Pulling-data-from-origin-main-Fri-02-May-2025--1746217412899.txt  (+16 more)
controllers/: activityController.js  (+4 more)
db/: init.js  (+1 more)
(+62 files in other folders)
